Phase-0/suchen/frontend/frontend.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-deployment
      role: backend
      scs: einbuchen
  template:
    metadata:
      labels:
        app: frontend-deployment
        role: backend
        scs: einbuchen
    spec:
      containers:
      - name: varnish-esi
        image: million12/varnish
        volumeMounts:
        - name: varnish-config-volume
          mountPath: /etc/varnish/
      - name: frontend
        image: lars0395/frontend
      volumes:
      - name: varnish-config-volume
        configMap:
          name: varnish-for-frontend
---

apiVersion: v1
kind: Service
metadata:
  name: frontend-deployment
spec:
  ports:
  - port: 8080
    name: web
  selector:
    app: frontend-deployment
    role: backend
