Phase-0/suchen/frontend/frontendIngress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
  - host: 1.g.ch.innoq.io
    http:
      paths:
      - path: /suchen
        backend:
          serviceName: frontend-deployment
          servicePort: 8080
